# python-computer-craft

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  testmod.py
.github/workflows/: build.yml
computercraft/: back.lua  errors.py  lua.py  rproc.py  ser.py  server.py  sess.py
computercraft/cc/: commands.py  disk.py  fs.py  gps.py  help.py  multishell.py  os.py  paintutils.py  parallel.py  peripheral.py  rednet.py  redstone.py  settings.py  shell.py  term.py  textutils.py  turtle.py  window.py
computercraft/cc_peripherals/: __init__.py  _base.py  command.py  computer.py  drive.py  inventory.py  modem.py  printer.py  speaker.py  term.py  (+1 more)
examples/: __init__.py  _lib.py  args.py  hello.py  id.py  modem_server.py  move.py  read.py  test_colors.py  test_commands.py  test_disk.py  test_fs.py  test_gps_basic_computer.py  test_gps_command_computer.py  test_help.py  test_keys.py  test_multishell.py  test_os.py  test_paintutils.py  test_parallel.py  test_peripheral.py  test_peripheral_commandblock.py  test_peripheral_computer.py  test_peripheral_disk.py  test_peripheral_modem.py  test_peripheral_monitor.py  test_peripheral_printer.py  test_peripheral_remote.py  test_peripheral_speaker.py  test_peripheral_turtle.py  test_pocket.py  test_reboot.py  test_redirect_to_local_monitor.py  test_redirect_to_remote_monitor.py  test_redirect_to_window.py  test_rednet.py  test_redstone.py  test_settings.py  test_shell.py  test_shutdown.py  (+6 more)
tests/: TDESC.md  TDESC_CC.md  conftest.py  serialization.lua  serialization.py  test_proto.py  test_serialization.py
(+174 files in other folders)
